<resources>
    <string name="app_name">EasePay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- login -->
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwrd">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_email">Enter your username</string>
    <string name="err_msg_pwrd">Enter your password</string>

    <!--End of login -->

    <!--Start Registration-->

    <string name="hint_fname">First Name</string>
    <string name="hint_mname">Middle Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email1">Email</string>
    <string name="hint_pwrd1">Password</string>
    <string name="hint_tel">Phone Number</string>
    <string name="btn_submit">submit</string>


    <!--End Registration-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_account_fragment">Hello account fragment</string>
    <string name="hello_payment_option_fragment">Hello payment option fragment</string>
    <string name="hello_other_fragment">Hello others fragment</string>
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_history_fragment">Hello History fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="payment_instruction1">Enter Order Number From:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_txtv">Order ID</string>
    <string name="wallet_balance_txtv">Wallet Balance</string>
    <string name="amount_txtv">Amount to Pay</string>


</resources>
