<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="16dp"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:src="@drawable/epay_brand_name"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_pwrd" />
            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btn_signin"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:textSize="18dp"
                android:background="@color/main_btn"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Forgot password?"
                android:id="@+id/ForgottenPwrdTxv"
                android:textColor="@color/links"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:linksClickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="New User?"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:id="@+id/btn_signup"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_sign_up"
                android:textSize="14dp"
                android:background="@color/sec_btn"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>


        </LinearLayout>

    </ScrollView>





</android.support.design.widget.CoordinatorLayout>
