<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.droid.omega.easepay.PaymentInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_txtv"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="XXXXXXXXX"
                android:id="@+id/orderNum_txtv"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"/>
            <View
                style="@style/Divider"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount_txtv"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GHS 0.00"
                android:id="@+id/amount_txtv"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
            <View
                style="@style/Divider"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance_txtv"
                android:textSize="15sp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GHS 0.00"
                android:textSize="20sp"
                android:id="@+id/wallet_ballance_txtv"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
            <View
                style="@style/Divider"
                />

            <EditText
                android:id="@+id/secretPin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:layout_gravity="center"
                android:singleLine="true"
                android:typeface="monospace"
                android:background="@drawable/edittext_border"
                android:hint="Enter Secret Pin"
                android:textAlignment="center"
                android:layout_marginTop="30dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">
                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Cancel"
                    android:layout_marginRight="10dp"
                    android:textColor="#ffffff"
                    android:background="@color/sec_btn"

                    />
                <Button
                    android:id="@+id/pay_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Pay"
                    android:textColor="#ffffff"
                    android:background="@color/main_btn"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>
